# FlowPy2

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
benchmarks/: asv.conf.json  params.json
benchmarks/benchmarks/: benchmark_cython.py  benchmark_numba.py  common.py
examples/Incompact3D example/: README.md  example.py  get_data.py
examples/coordstruct/: basic.ipynb
examples/flowstruct/: basic.ipynb  file_io.ipynb
flowpy/: __init__.py  arrays.py  coords.py  data_accessors.py  datastruct.py  errors.py  flow_type.py  flowstruct.py  gradient.py  indexers.py
flowpy/_arrays_old/: __init__.py  array.py  base.py  group.py
flowpy/io/: hdf5.py
flowpy/numba/: gradient.py  operations.py
flowpy/numba/tests/: test_gradients.py  test_operations.py
flowpy/tests/: test_coordstruct.py  test_datastruct.py  test_flowstructs.py  test_gradients.py  test_indexers.py  test_netcdf.py
src/: tikz_builder.py
src/flowpy/: arrays.py  coords.py  datastruct.py  flowstruct.py  gradient.py  indexers.py  utils.py
src/flowpy/cython/: gradient.pyx
src/flowpy/io/: netcdf.py
src/flowpy/numba/: _utils.py
src/flowpy/plotting/: mpl_extensions.py
src/flowpy/tests/: test_arrays.py  test_coordstruct.py  test_flowstructs.py  test_gradients.py  test_hdf5.py
src/flowpy2/: __init__.py  arrays.py  coords.py  datastruct.py  flow_type.py  flowstruct.py  gradient.py  groups.py  indexers.py  integrate.py  utils.py
src/flowpy2/cython/: gradient.pyi  gradient.pyx
src/flowpy2/io/: __init__.py  _common.py  (+2 more)
(+24 files in other folders)
